test(integration): complete component model test suite with real WASM tests
- Update ComponentFuncIntegrationTest to use real WASM component testing
- Add dynamic native library detection pattern for graceful test skipping
- Remove placeholder tests and implement 11 real component function tests
- Clean up excluded test files and unused test resources
- Fix panic handling in Cargo.toml for catch_unwind to work correctly
- All 247 integration tests now passing with 0 failures

This completes Phase 4 of the test improvement plan with all Component
Model tests (55 total) now using real WASM components instead of stubs.